# EndraApp

./: .gitignore  ComparisonToBerty.md  Makefile  README.md  ReadMe.md  ToDo.md  __main__.py  build_apk.sh  build_flatpak.sh  build_pyinstaller.py  buildozer.spec  flatpak.yaml  install_prereqs.sh  prebuild.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.sh  tech.emendir.Endra.desktop  tech.emendir.endra.desktop  testing  tmmp.txt
docs/: AppData.md
packaging/: Packaging.md
packaging/buildozer/: build_apk.sh  buildozer.spec  get_python_deps.sh  prebuild.sh  requirements-auto.txt  requirements-buildozer.txt  requirements-exclusions.txt  requirements-manual.txt
packaging/buildozer-macos/: .gitignore  build_apk.sh  build_dmg.sh  buildozer.spec  install_prereqs_macos.sh  requirements-exclusions.txt  requirements-manual.txt
packaging/flatpak/: build_flatpak.sh  generate_metainfo.py  manual_metainfo.xml  python3-modules-flatpak-binary.json  python3-modules-flatpak-manual.json  python3-modules-flatpak.json  python3-modules-force.json  python3-modules-full.json  python3-modules-prereqs.json  python3-modules.json  requirements-auto.txt  requirements-flatpak.txt  requirements-force.txt  requirements-full.txt  requirements-manual.txt  requirements-prereqs.txt  run_endra.sh  tech.emendir.Endra.metainfo.xml  tech.emendir.Endra.yml
packaging/orchestration/: build_all.sh
packaging/os_prereqs/: install_prereqs.sh  macos.sh  os_package_utils.sh  os_platform_info.sh
packaging/pyinstaller/: build_pyinstaller.py  build_pyinstaller.sh  build_windows.sh
packaging/pyinstaller-macos/: EndraApp-Windows-Multi-File.spec  build_macos.sh  build_pyinstaller.py
packaging/share/: endra-icon.icns  get_python_deps.sh  tech.emendir.Endra.desktop
src/: __main__.py  crash_window.py  main.py
src/endra_app/: __init__.py  __main__.py  _load_ipfs_waly.py  _load_kivy.py  central_page.py  log.py  (+20 more)
tests/: _testing_utils.py  test_app.py  update_appdata.sh
(+53 files in other folders)
