[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies"]
name = "endra_app"
authors = [{ name = "emendir" }]
version = "0.1.2"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
endra_app = ["*.kv"]

[tool.setuptools.packages.find]
where = ["src"]
include = [
"endra_app"
]
namespaces = false 

[project.scripts]
endra_app = "endra_app:run"