[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies"]
name = "endra_app"
authors = [{ name = "emendir" }]
version = "0.1.3"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
endra_app = ["*.kv","*.otf"]
"endra_app.fonts" = ["*.kv","*.otf"]

[tool.setuptools.packages.find]
where = ["src"]
include = [
"endra_app",
"endra_app.fonts",
]
namespaces = false 

[project.scripts]
endra_app = "endra_app:run"